# parallel-filtering-using-matrix-factorization

./: README.md
parrallel/: CMakeLists.txt  converter.c  mapper.c  matFact-omp.c
sequential/: CMakeLists.txt  main.c  movies.in  movies.out  recommendations.txt
